Closed Bug 341711 Opened 19 years ago Closed 19 years ago

fix offset* properties to use unscrolled positions

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(2 files, 1 obsolete file)

Attached file testcase
The offsetTop should be constant regardless of the scroll position, but it isn't.
Attached patch fix (obsolete) — Splinter Review
Fixes offset* regression.
Attachment #225835 - Flags: superreview?(bzbarsky)
Attachment #225835 - Flags: review?(bzbarsky)
is this the right patch? it seems to be for something foreignObject-related.
Comment on attachment 225835 [details] [diff] [review] fix oops, wrong patch
Attachment #225835 - Flags: superreview?(bzbarsky)
Attachment #225835 - Flags: review?(bzbarsky)
Attached patch correct patchSplinter Review
this is the correct patch, sorry. It's a very simple change :-)
Attachment #225835 - Attachment is obsolete: true
Attachment #226257 - Flags: superreview?(bzbarsky)
Attachment #226257 - Flags: review?(bzbarsky)
Comment on attachment 226257 [details] [diff] [review] correct patch Looks good
Attachment #226257 - Flags: superreview?(bzbarsky)
Attachment #226257 - Flags: superreview+
Attachment #226257 - Flags: review?(bzbarsky)
Attachment #226257 - Flags: review+
checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Depends on: 368735
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: