Bug 341711. Compute offset* properties using unscrolled positions. r+sr=bzbarsky